Made the header (left-header and nav) responsive, fixed/changed nav layout, readjusted icon change hit box and alignment

--- a/app/src/styles/base/_base.scss
+++ b/app/src/styles/base/_base.scss
@@ -24,6 +24,13 @@ button {
   }
 }
 
+.icon {
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    vertical-align: top;
+}
+
 // design system related, move out
 .spacing-xs {
   background-color: $primary-color;
